workspace = { members = ["server"] }
[package]
name = "clock-register"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build_html = "2.4.0"
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive"] }
include_dir = "0.7.3"
linked-hash-map = "0.5.6"
sqlite = "0.32.0"
url = "2.5.0"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
